# CoRex

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  _typos.toml  main.py  pyproject.toml
corex/: analyzer.py  config.py  extractor.py  llms.py  main.py
experiments/: extract_info_by_keyword.py  extract_py_comment.py  extract_py_comments_with_context.py  python_comments_comments.json  test.py
experiments/datasets/: c_comments.c  cpp_comments.cpp  cuda_comments.cu  header_comments.h  objcpp_comments.mm  python_comments.py
llm_config/: llm_keys.yaml  model_config.yaml
prompts/: analysis_comment_with_context.md  analysis_comment_without_context.md
