[project]
name = "CoRex"
version = "0.1.0"
description = "CoRex: Comment-based Review and Error Exploration System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.3",
    "langchain-openai>=1.0.1",
    "loguru>=0.7.3",
    "pre-commit>=4.3.0",
    "rich>=14.2.0",
    "tree-sitter==0.20.4",
    "tree-sitter-languages>=1.10.2",
    "typer>=0.20.0",
    "typos>=1.38.1",
]


[tool.ruff]
target-version = "py314"
fix = true

[tool.ruff.lint]
extend-select = ["I"]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
